Remove user data from GET mediaRef responses; update mediaRef relationships
